--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Mayank9mishra-portfolio",
+  "name": "Mayank10123-portfolio",
   "version": "2.0.0",
   "private": true,
-  "homepage": "https://Mayank9mishra.github.io/",
+  "homepage": "https://Mayank10123.github.io/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
